# panarch

./: .gitignore  CMakeLists.txt  README.md  justfile
src/: main.cpp
src/backend/: AssetFilterModel.cpp  AssetFilterModel.h  AssetIndex.cpp  AssetIndex.h  AssetListModel.cpp  AssetListModel.h  Backend.cpp  Backend.h
src/backend/scripts/: asset_details.py  scan_assets.py
src/processes/: ScanAssets.cpp  ScanAssets.h  ScanAssetsMain.cpp  ThumbnailGenerator.cpp  ThumbnailGenerator.h  ThumbnailGeneratorMain.cpp  UsdInspector.cpp  UsdInspector.h  UsdInspectorMain.cpp
src/qml/: main.qml
src/render/: ThumbnailGeneratorMain.cpp
src/shared/: AssetTypes.h
src/ui/: Main.qml  PButton.qml  PIndicator.qml  PInfoList.qml  PInfoRow.qml  PMenuButton.qml  PSectionHeader.qml  PTooltip.qml  Theme.qml  main.qml
src/utils/: OsUtils.h
